Fixed mobile styles of form area on mobile homepage

--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,12 @@ main {
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.2;
+  width: 90%;
+}
+
+.form-aside-etc {
+  display: flex;
+  justify-content: center;
 }
 
 .content-wrapper h1 {
@@ -854,6 +860,10 @@ header nav ul li a {
 
 .hero-area h1 {
   font-size: 2.90em;
+}
+
+.form-aside-etc .content-wrapper {
+  display: flex;
 }
 
 .header-divider {
